Added libraries and now the example compiles with one error

--- a/proj/src/makefile
+++ b/proj/src/makefile
@@ -11,17 +11,17 @@ LIBS=-lm
 
 
 
-_DEPS = spi.h Adafruit_ILI9340.h
+_DEPS = spi.h Adafruit_ILI9340.h Adafruit_GFX.h
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
-_OBJ = spi.o #Adafruit_ILI9340.o 
+_OBJ = graphicstest.o  spi.o Adafruit_ILI9340.o Adafruit_GFX.o 
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 $(ODIR)/%.o: %.c $(DEPS)
 #	$(CC) -c -o $@ $< $(CFLAGS)
 	 $(CXX) -c -o $@ $< $(CFLAGS) $(CPPFLAGS)
 
-spi: $(OBJ)
+test: $(OBJ)
 #	gcc -o $@ $^ $(CFLAGS) $(LIBS)
 	$(CXX) -o $@ $^ $(CFLAGS) $(LIBS) $(CXXFLAGS)
 
