--- a/proj/src/makefile
+++ b/proj/src/makefile
@@ -11,10 +11,10 @@ LIBS=-lm
 
 #g++ -o graphicstest graphicstest.cpp Adafruit_ILI9340.cpp Adafruit_GFX.cpp spi.c glcdfont.c -I../include
 
-_DEPS = spi.h Adafruit_ILI9340.h Adafruit_GFX.h
+_DEPS = spi.h Adafruit_ILI9340.h Adafruit_GFX.h SimpleGPIO.h
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
-_OBJ = graphicstest.o  spi.o Adafruit_ILI9340.o Adafruit_GFX.o glcdfont.o 
+_OBJ = graphicstest.o  spi.o Adafruit_ILI9340.o Adafruit_GFX.o glcdfont.o SimpleGPIO.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 $(ODIR)/%.o: %.cpp $(DEPS)
